tests/no_compile/bad_inner_attr.stderr
error: `#[mmio(...)]` only supports 'Read', 'ReadWrite', 'Write', 'Modify' and 'inner' options
 --> tests/no_compile/bad_inner_attr.rs:4:5
  |
4 |     #[mmio(RW)]
  |     ^
